doc(contributing): update google-java-format setup guide